# toolkit

./: .env.example  .gitignore  AGENTS.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  self-review.yml
scripts/: smoke_test_provider.py
src/ai_toolkit/: cli.py
src/ai_toolkit/core/: config.py  diff_parser.py  github_client.py  pr_context.py
src/ai_toolkit/providers/: base.py  factory.py  openai_compatible.py
src/ai_toolkit/shared/: errors.py  llm_json.py  telemetry.py
src/ai_toolkit/shared/sinks/: github_output.py  step_summary.py
src/ai_toolkit/tools/changelog/: generator.py  prompts.py  schema.py
src/ai_toolkit/tools/pr_description/: generator.py  prompts.py  schema.py
src/ai_toolkit/tools/pr_reviewer/: prompts.py  reviewer.py  schema.py
src/ai_toolkit/tools/test_recommendation/: generator.py  prompts.py  schema.py
tests/: test_changelog_generator.py  test_changelog_prompts.py  test_changelog_schema.py  test_cli.py  test_config.py  test_diff_parser.py  test_github_client.py  test_github_output.py  test_llm_json.py  test_openai_compatible_provider.py  test_pr_context.py  test_pr_description_generator.py  test_pr_description_prompts.py  test_pr_description_schema.py  test_pr_reviewer_orchestration.py  test_pr_reviewer_prompts.py  test_pr_reviewer_schema.py  test_provider_factory.py  test_step_summary.py  test_telemetry.py  test_test_recommendation_generator.py  test_test_recommendation_prompts.py  test_test_recommendation_schema.py
tests/fixtures/: sample.diff
